# pytest-playwright

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
configurations/: config.conf.example
logs/: customLogger.py
pages/: loginPage.py
tests/: conftest.py
tests/api/: test_api.py
tests/ui/: test_login.py
utilities/: cookie.py  readConfig.py
